--- a/tables/tableEficienciaBEAPI.tex
+++ b/tables/tableEficienciaBEAPI.tex
@@ -79,9 +79,9 @@
 % % & & 5 & 0.13  & 781 & 996 & 0.33  & 781 & 3911  \\
 % % % & & 6 & 0.15  & 9331  & 11224 & 1.58  & 9331  & 55993 \\
 % %   & 7 & 0.24  & 137257  & 160168  & 15.38 & 137257  & 960807  \\
-  & 8 & 1.36  & 2396745 & 2739181 & 297.41  & 2396745 & 19173969  \\
-& & 9 & 30.47 & 48427561  & 54481060  & TO  &   &   \\
-& & 10  & \textbf{681.89} & \textbf{1111111111} & 1234567966  & TO  &   &   \\
+  & 8 & 1.36  & 297.41  & 2396745 & 2396745 & 2739181 & 19173969  \\
+& & 9 & 30.47 &  TO & 48427561 &   &   & 54481060   \\
+& & 10  & \textbf{681.89} & TO &  \textbf{1111111111} &  &  1234567966 &   \\
 \cmidrule{2-9}
  &DLList 
 %     & 3 & 0.101 & 13  & 42  & 0.01  & 13  & 43  \\
@@ -89,16 +89,16 @@
 % & & 5 & 0.113 & 781 & 1035  & 0.17  & 781 & 3911  \\
 % & & 6 & 0.129 & 9331  & 11280 & 0.83  & 9331  & 55993 \\
   % & 7 & 0.254 & 137257  & 160244  & 12.14 & 137257  & 960807  \\
-  & 8 & 1.734 & 2396745 & 2739280 & 269.47  & 2396745 & 19173969  \\
-& & 9 & 32.748  & 48427561  & 54481185  & TO  &   &   \\
-& & 10  & 802.047 & 1111111111  & 1234568120  & TO  &   &   \\
+  & 8 & 1.734 & 269.47  & 2396745& 2396745   &  2739280& 19173969  \\
+& & 9 & 32.748  &  TO &   48427561&   &   &  54481185 \\
+& & 10  & 802.047 &  TO &   1111111111&   &   & 1234568120  \\
 \cmidrule{2-9}
  &NCL 
     % & 3 & 0.12  & 102 & 4344  & 0.06  & 18  & 114 \\
   % & 4 & 0.16  & 1252  & 64269 & 0.26  & 112 & 904 \\
-  & 5 & 0.63  & 18555 & 1205794 & 0.84  & 975 & 9760  \\
-& & 6 & 7.12  & 324726  & 26462391  & 4.80  & 11196 & 134364  \\
-& & 7 & 182.25  & 6565468 & 657989516 & 58.75 & 160132  & 2241862 \\
+  & 5 & 0.63  &0.84  & 18555  &  975 &  1205794& 9760  \\
+& & 6 & 7.12  & 4.80   &  324726 & 11196  &  26462391 & 134364  \\
+& & 7 & 182.25  &58.75    &  6565468& 160132 &  657989516 & 2241862 \\
 \bottomrule
 
 \end{tabular}%
