updated hashset beapi

--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -14,20 +14,21 @@
   % BEAPI-s6,	 & 1 &  78/1092  & 7 & 79 	&   109 \\
   % BEAPI-s5,	 & 1 &  158/2212  & 8 & 79 	&   109 \\
   % BEAPI-s12, & 4  & 8000/112000  & 8 &  79	&   109 \\
-  BEAPI-s14, & 27  & 50000/700000  & 37 &  79	&   109 \\
+  BEAPI-s13, & 27  & 29968/419552  & 38 &  79	&   109 \\
   \cline{1-6}
   Randoop 	&	60	 &	---/4934  & 12   &  79	& 100    \\
   RSer-API	& 60	 &  41888/586432 & 57   &  82	&   100 \\
   RSer-MGO	& 60	 &  74626/1044764 &  106  & 83	&  100  \\
+  BEAPI-s14, & 59  & 99968/1399552  & 73 &  79	&   109 \\
   \cline{1-6}
   Randoop	 &	 120  &  ---/9950  & 12   &  85	& TO    \\
   RSer-API	&  120	& 78813/1103382 & 101   &  85	&   102 \\
   RSer-MGO	&  120	& 112452/1574328  &  158  & 85	&  109  \\
-  BEAPI-s15 &   75  & 125000/1750000  & 94 & 85 	&   109 \\
   \cline{1-6}
   Randoop	 &  180	 &  ---/14614 & 32  &  85	& TO    \\
   RSer-API	& 180	 & 114605/1604470  &  168  &  85 	& 103   \\
   RSer-MGO	& 180	 &  139857/1957998  & 202   &  85	&  109  \\
+  BEAPI-s15 &   167  & 249936/3499104  & 195 & 85 	&   109 \\
 \midrule
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en HashSet}
